--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
-    "@tanstack/react-query": "^4.29.19",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
@@ -23,5 +21,8 @@
     "react-icons": "^4.10.1",
     "styled-components": "^6.0.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
