--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-responsive-modal": "^6.4.2",
     "styled-components": "^6.0.1",
     "typescript": "5.1.6"
   },
