--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
+    "@faker-js/faker": "^8.0.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "graphql": "^16.7.1",
+    "graphql-yoga": "^4.0.3",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
